--- a/assets/css/defs.scss
+++ b/assets/css/defs.scss
@@ -2,6 +2,9 @@
 @mixin trs_use_filename_color {
     color: rgba(25, 23, 17, 0.6);
 }
+@mixin trs_use_filename_color_selected {
+    color: rgba(25, 23, 17, 1);
+}
 @mixin trs_use_filename_fill {
     fill: rgba(25, 23, 17, 0.6);
 }
