feat(anime): add horizontal navigation

--- a/assets/commons.scss
+++ b/assets/commons.scss
@@ -2,5 +2,11 @@ html,
 body,
 #__nuxt,
 #app {
-    min-height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#app>main {
+    flex-grow: 1;
 }
